--- a/research/Insurance_Claim_Prediction.ipynb
+++ b/research/Insurance_Claim_Prediction.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "ebdb1482",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
        "      <td>328</td>\n",
        "      <td>48</td>\n",
        "      <td>521585</td>\n",
-       "      <td>17/10/2014</td>\n",
+       "      <td>2014-10-17</td>\n",
        "      <td>OH</td>\n",
        "      <td>250/500</td>\n",
        "      <td>1000</td>\n",
@@ -141,7 +141,7 @@
        "      <td>228</td>\n",
        "      <td>42</td>\n",
        "      <td>342868</td>\n",
-       "      <td>27/06/2006</td>\n",
+       "      <td>2006-06-27</td>\n",
        "      <td>IN</td>\n",
        "      <td>250/500</td>\n",
        "      <td>2000</td>\n",
@@ -183,7 +183,7 @@
        "      <td>134</td>\n",
        "      <td>29</td>\n",
        "      <td>687698</td>\n",
-       "      <td>06/09/2000</td>\n",
+       "      <td>2000-09-06</td>\n",
        "      <td>OH</td>\n",
        "      <td>100/300</td>\n",
        "      <td>2000</td>\n",
@@ -225,7 +225,7 @@
        "      <td>256</td>\n",
        "      <td>41</td>\n",
        "      <td>227811</td>\n",
-       "      <td>25/05/1990</td>\n",
+       "      <td>1990-05-25</td>\n",
        "      <td>IL</td>\n",
        "      <td>250/500</td>\n",
        "      <td>2000</td>\n",
@@ -267,7 +267,7 @@
        "      <td>228</td>\n",
        "      <td>44</td>\n",
        "      <td>367455</td>\n",
-       "      <td>06/06/2014</td>\n",
+       "      <td>2014-06-06</td>\n",
        "      <td>IL</td>\n",
        "      <td>500/1000</td>\n",
        "      <td>1000</td>\n",
@@ -310,11 +310,11 @@
       ],
       "text/plain": [
        "   months_as_customer  age  policy_number policy_bind_date policy_state  \\\n",
-       "0                 328   48         521585       17/10/2014           OH   \n",
-       "1                 228   42         342868       27/06/2006           IN   \n",
-       "2                 134   29         687698       06/09/2000           OH   \n",
-       "3                 256   41         227811       25/05/1990           IL   \n",
-       "4                 228   44         367455       06/06/2014           IL   \n",
+       "0                 328   48         521585       2014-10-17           OH   \n",
+       "1                 228   42         342868       2006-06-27           IN   \n",
+       "2                 134   29         687698       2000-09-06           OH   \n",
+       "3                 256   41         227811       1990-05-25           IL   \n",
+       "4                 228   44         367455       2014-06-06           IL   \n",
        "\n",
        "  policy_csl  policy_deductable  policy_annual_premium  umbrella_limit  \\\n",
        "0    250/500               1000                1406.91               0   \n",
@@ -380,19 +380,19 @@
        "4       2009              N  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('insurance_fraud_claims.csv')\n",
+    "df = pd.read_csv('/Users/don/github-projects/insurance-claim-fraud-detection-prediction/artefacts/2024_07_12_14_55_56/RawData/insurance_fraud_claims.csv')\n",
     "df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "72c3f9c8",
    "metadata": {},
    "outputs": [
@@ -402,13 +402,93 @@
        "(1000, 39)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c95d6abe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "columns:\n",
+      "  - months_as_customer: int64\n",
+      "  - age: int64\n",
+      "  - policy_number: int64\n",
+      "  - policy_bind_date: object\n",
+      "  - policy_state: object\n",
+      "  - policy_csl: object\n",
+      "  - policy_deductable: int64\n",
+      "  - policy_annual_premium: float64\n",
+      "  - umbrella_limit: int64\n",
+      "  - insured_zip: int64\n",
+      "  - insured_sex: object\n",
+      "  - insured_education_level: object\n",
+      "  - insured_occupation: object\n",
+      "  - insured_hobbies: object\n",
+      "  - insured_relationship: object\n",
+      "  - capital-gains: int64\n",
+      "  - capital-loss: int64\n",
+      "  - incident_date: object\n",
+      "  - incident_type: object\n",
+      "  - collision_type: object\n",
+      "  - incident_severity: object\n",
+      "  - authorities_contacted: object\n",
+      "  - incident_state: object\n",
+      "  - incident_city: object\n",
+      "  - incident_location: object\n",
+      "  - incident_hour_of_the_day: int64\n",
+      "  - number_of_vehicles_involved: int64\n",
+      "  - property_damage: object\n",
+      "  - bodily_injuries: int64\n",
+      "  - witnesses: int64\n",
+      "  - police_report_available: object\n",
+      "  - total_claim_amount: int64\n",
+      "  - injury_claim: int64\n",
+      "  - property_claim: int64\n",
+      "  - vehicle_claim: int64\n",
+      "  - auto_make: object\n",
+      "  - auto_model: object\n",
+      "  - auto_year: int64\n",
+      "  - fraud_reported: object\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def process_df(df):\n",
+    "  \"\"\"\n",
+    "  returns information about the DataFrame columns.\n",
+    "\n",
+    "  Args:\n",
+    "      df: DataFrame.\n",
+    "\n",
+    "  Returns:\n",
+    "      A string describing the DataFrame columns and their data types.\n",
+    "  \"\"\"\n",
+    "  # Get column names and data types\n",
+    "  columns = df.dtypes.to_dict()\n",
+    "\n",
+    "  # Create the desired output string\n",
+    "  output = \"columns:\\n\"\n",
+    "  for col, dtype in columns.items():\n",
+    "    if dtype != 'xxobject':\n",
+    "      output += f\"  - {col}: {dtype}\\n\"\n",
+    "      #output += f\"  - {col}\\n\"\n",
+    "\n",
+    "  return output\n",
+    "formated_df_info = process_df(df)\n",
+    "print(formated_df_info)"
    ]
   },
   {
@@ -1987,7 +2067,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv311_insure",
    "language": "python",
    "name": "python3"
   },
