update model trainer

--- a/research/experiment.ipynb
+++ b/research/experiment.ipynb
@@ -48,6 +48,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dill\n",
+    "def load_object(file_path: str) -> object:\n",
+    "        print(\"Entered the load_object method of MainUtils class\")\n",
+    "        try:\n",
+    "            with open(file_path, \"rb\") as file_obj:\n",
+    "                obj = dill.load(file_obj)\n",
+    "            print(f\"Successfully loaded the object from {file_path}\")\n",
+    "            print(\"Exited the load_object method of MainUtils class\")\n",
+    "            return obj\n",
+    "        except Exception as e:\n",
+    "            raise e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entered the load_object method of MainUtils class\n",
+      "Successfully loaded the object from insurance_claim_fraud_model.pkl\n",
+      "Exited the load_object method of MainUtils class\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj = load_object('insurance_claim_fraud_model.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DecisionTree\n",
+      "{'max_depth': 21, 'min_samples_split': 6, 'min_samples_leaf': 17, 'categorical_strategy': 'most_frequent', 'numerical_strategy': 'mean', 'outlier_strategy': 'power_transform', 'resampler': 'RandomUnderSampler', 'scaler': 'standard', 'dim_red': None}\n",
+      "0.656\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in obj:\n",
+    "    print(f\"{item}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
